# bivalve

./: Cargo.toml  README.md
readlion/: Cargo.toml
readlion/src/: main.rs
shell-engine/: Cargo.toml
shell-engine/samples/: blah.sh
shell-engine/src/: main.rs  parse.rs  rt.rs
shell-engine/src/rt/simple/: builtins.rs
src/: exec.rs  lib.rs  main.rs  parse.rs
src/exec/: conch.rs
src/rt/: simple.rs
src/rt/simple/: builtins.rs
