[package]
name = "bivalve"
version = "0.1.0"
authors = ["Stephen Weeks <tene@allalone.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conch-parser = "0.1.1"
structopt = "0.3.21"
anyhow = "1.0.38"
itertools = "0.10.0"
